# rust-os

./: .gitignore  Cargo.toml  Makefile
.cargo/: config.toml
misc/: limine.conf  linker.ld
src/: main.rs
src/cpu/: gdt.rs  interrupts.rs
src/framebuffer/: mod.rs
src/graphics/: framebuffer.rs  mod.rs  terminal.rs
src/types/: mod.rs
