[package]
name = "rust-os"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"
lto = false

[profile.dev.package."*"]
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 2

[[bin]]
name = "rust-os"
test = false
bench = false

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
limine = "0.6.5"
log = "0.4.33"
noto-sans-mono-bitmap = "0.3.2"
x86_64 = "0.15.4"
