[package]
name = "rust-os"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"
lto = false

[profile.dev.package."*"]
opt-level = 2

[profile.release]
panic = "abort"
opt-level = 2

[[bin]]
name = "rust-os"
test = false
bench = false

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.6.5"
log = { version = "0.4.33", features = [] }
noto-sans-mono-bitmap = { version = "0.3.2", features = ["bold", "size_20"] }
x86_64 = "0.15.4"
spin = "0.12.1"
volatile = "0.6.1"
